--- a/package.json
+++ b/package.json
@@ -9,19 +9,37 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "avatax": "^25.1.0",
+    "axios": "^1.7.9",
+    "clsx": "^2.1.1",
+    "formik": "^2.4.6",
+    "lodash.random": "^3.2.0",
+    "lodash.throttle": "^4.1.1",
+    "next": "15.1.6",
+    "pure-react-carousel": "^1.32.0",
     "react": "^19.0.0",
+    "react-acceptjs": "^0.5.0",
     "react-dom": "^19.0.0",
-    "next": "15.1.6"
+    "react-fast-marquee": "^1.6.5",
+    "react-medium-image-zoom": "^5.2.13",
+    "react-select": "^5.10.0",
+    "react-svg": "^16.3.0",
+    "react-use-measure": "^2.1.7",
+    "styled-components": "^6.1.14",
+    "tailwind-merge": "^3.0.1",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/lodash.random": "^3.2.9",
+    "@types/lodash.throttle": "^4.1.9",
+    "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
-    "@eslint/eslintrc": "^3"
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
