--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.9",
     "clsx": "^2.1.1",
     "formik": "^2.4.6",
+    "lodash.ceil": "^4.0.4",
     "lodash.random": "^3.2.0",
     "lodash.throttle": "^4.1.1",
     "next": "15.1.6",
@@ -26,16 +27,21 @@
     "react-svg": "^16.3.0",
     "react-use-measure": "^2.1.7",
     "styled-components": "^6.1.14",
+    "styled-system": "^5.1.5",
     "tailwind-merge": "^3.0.1",
-    "yup": "^1.6.1"
+    "tailwind-scrollbar-hide": "^2.0.0",
+    "yup": "^1.6.1",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3",
+    "@types/lodash.ceil": "^4.0.9",
     "@types/lodash.random": "^3.2.9",
     "@types/lodash.throttle": "^4.1.9",
-    "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/styled-system": "^5.1.23",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
     "postcss": "^8",
